--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
                         "file": 1
                     },
                     {
-                        "regexp": "^(\\w[\\w\\s]*:( \\w+:)* .*)\\((\\d+:\\d+)?\\)?",
+                        "regexp": "^(\\w[\\w\\s]*:( \\w+:)* .*)(\\((\\d+:\\d+)?\\))?",
                         "message": 1,
                         "location": 3
                     },
