--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "ts-loader-problem-matcher",
     "displayName": "ts-loader Problem Matcher",
     "description": "Problem matcher for ts-loader",
-    "version": "0.1.0",
+    "version": "0.3.0",
     "publisher": "alqiu",
     "repository": {
         "type": "git",
@@ -53,8 +53,7 @@
                     {
                         "regexp": ".*(\\d+):(\\d+)-?(\\d+)?(.*)",
                         "line": 1,
-                        "column": 2,
-                        "endColumn": 3
+                        "loop": true
                     }
                 ]
             }
